# daw

./: .gitignore  Cargo.toml  flake.nix
daw/: Cargo.toml
daw-core/: Cargo.toml
daw-core/src/: channel.rs  clip.rs  lib.rs  note.rs  pattern.rs  playlist.rs  project.rs
daw-dispatch/: Cargo.toml
daw-dispatch/src/: commands.rs  lib.rs
daw-ui/: Cargo.toml
daw-ui/src/: app.rs  explorer.rs  lib.rs  piano_roll.rs  playlist.rs  theme.rs
daw/src/: main.rs
daw_audio_engine/: Cargo.toml
daw_audio_engine/examples/: channel_chords.rs  clean_chords.rs  debug_audio.rs  debug_note_events.rs  debug_sequencer.rs  list_devices.rs  midi_synth.rs  play_audio.rs  scan_hardware.rs  simple_chords.rs  simple_sequencer.rs  synced_chords.rs  test_note.rs  test_raw_devices.rs  test_synth_audio.rs  transport_demo.rs
daw_audio_engine/src/: buffer.rs  clip.rs  device.rs  engine.rs  error.rs  file_io.rs  hardware.rs  instrument.rs  instrument_processor.rs  lib.rs  midi_event.rs  midi_input.rs  player_processor.rs  processor.rs  sine_synth.rs  stream.rs  timeline.rs  timeline_processor.rs  transport.rs
daw_audio_engine/src/synth/: envelope.rs  mod.rs  simple.rs  sine.rs  voice.rs
