[package]
name = "daw_ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
daw_audio_engine.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras = { version = "0.33.3", features = ["svg"] }
parking_lot.workspace = true

[lints]
workspace = true
