[package]
name = "daw_audio_engine"
version = "0.1.0"
edition = "2021"
authors = ["DAW Team"]
description = "Low-latency audio engine for DAW using cpal"

[dependencies]
cpal = "0.15"
ringbuf = "0.3"
crossbeam = "0.8"
thiserror = "1.0"
log = "0.4"
parking_lot = "0.12"

# Audio file I/O
hound = "3.5"
symphonia = { version = "0.5", default-features = false, features = ["wav", "flac", "ogg", "vorbis", "mp3"] }
byteorder = "1.5"

# MIDI
midir = "0.10"

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
asio = ["cpal/asio"]